# textMining

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.txt  TODO.txt  graph.txt  main
include/: damerau_levenshtein.hh  tries.hh
src/: character_freq.py  character_frequency.txt  damerau_levenshtein.cc  damerau_levenshtein.hh  main.cc  test_words.txt  tries.cc  tries.hh
test/: test.sh  test.txt
